<resources>
    <string name="app_name">My Cart</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="search_bar_hint">Search</string>
    <string name="checkout">Checkout</string>
    <string name="total">Total</string>
    <string name="back">Back</string>
    <string name="product">Product</string>
    <string name="total_price">Total price</string>
    <string name="quantity">Quantity</string>
    <string name="remove">Remove</string>
    <string name="add">Add</string>
</resources>